--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+.<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -23,7 +23,7 @@
 	 </p>
 	 </div>
 	
-	<div id="Personal_Photo"> <img src="/images/prof_pic.JPG" width="192" height="254"> <br>
+	<div id="Personal_Photo"> <img src="./images/prof_pic.JPG" width="192" height="254"> <br>
 	<p>
 	Room 418, CYM Physics BLD <br>
 	The University of Hong Kong<br>
