--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 	<nav>
 	<ul>
 		<li class="selected"><a href="index.html">Homepage</a></li>
-
+		<li><a href="">BLOG</a></li>
+		<li><a href="">Research</a></li>
+		<li><a href="">Publition</a></li>
 		<li><a href="http://www.physics.hku.hk/~phys4150/">Course</a></li>
 	</ul>
 	</nav>
