--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	 </p>
 	 </div>
 	
-	<div id="Personal_Photo"> <img src="./images/prof_pic.JPG" width="192" height="254"> <br>
+	<div id="Personal_Photo"> <img src="./images/prof_pic.gif" width="192" height="256"> <br>
 	<p>
 	Room 418, CYM Physics BLD <br>
 	The University of Hong Kong<br>
