--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	<a target="_blank" href="http://www.lzu.edu.cn/">兰州大学</a>，物理科学与技术学院，理论物理专业，兰州，2010年9月 - 2014年6月
 	</p>
 	<p>
-	<a target="_blank" href="http://www.hku.hk">香港大学</a>，物理学系，凝聚态方向，香港，2014年9月 - 至今
+	<a target="_blank" href="http://www.hku.hk">香港大学</a>，理学院，物理学系，凝聚态方向，香港，2014年9月 - 至今
 	</p>
 	
 	<h2>研究课题</h2>
