--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
 	<p>
 	在这一学期(2016-2017 &nbsp; Spring)，我是<a target="_blank" href="http://web.hku.hk/~jianwang/">王健教授</a>
 	开设的<em>计算物理</em> ( Computational Physics ) 课程的助教。
-	这门课程主要介绍在物理研究中常用的计算方法和计算理论。如果想了解详细情况，请关注我们的
+	这门课程主要介绍在物理研究中常用的计算方法和计算理论，重点介绍了数值积分，数值微分，插值算法，微分方程和矩阵计算等内容。
+		如果想了解详细情况，请关注我们的
 	<a target="_blank" href="http://www.physics.hku.hk/~phys4150/">课程网页</a>。
 	</p>
 	<p>
