--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-.<!DOCTYPE html>
+ .<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -14,7 +14,7 @@
 		<li><a href="">BLOG</a></li>
 		<li><a href="">Research</a></li>
 		<li><a href="">Publition</a></li>
-		<li><a href="http://www.physics.hku.hk/~phys4150/">Course</a></li>
+		<li><a target="_blank" href="http://www.physics.hku.hk/~phys4150/">Course</a></li>
 	</ul>
 	</nav>
 	
