--- a/index.html
+++ b/index.html
@@ -55,8 +55,11 @@
 	<a target="_blank" href="http://www.fuzhong.sd.cn/">山东师范大学附属中学</a>，济南，2007年9月 - 2010年6月
 	</p>
 	<p>
-	<a target="_blank" href="http://www.lzu.edu.cn/">兰州大学</a>，物理科学与技术学院，理论物理专业，兰州，2010年9月 - 2014年6月
+	<a target="_blank" href="http://www.lzu.edu.cn/">兰州大学</a>，物理科学与技术学院，理论物理专业，兰州，2010年9月 - 2012年6月
 	</p>
+	<p>
+        <a target="_blank" href="http://www.lzu.edu.cn/">兰州大学</a>，萃英学院，物理专业，兰州，2012年9月 - 2014年6月
+        </p>	
 	<p>
 	<a target="_blank" href="http://www.hku.hk">香港大学</a>，理学院，物理学系，凝聚态方向，香港，2014年9月 - 至今
 	</p>
