--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 	主要用于计算无相互作用系统中的<em>暂态电流</em>。
 	</p>
 	<p>
-	用<em>全系综统计</em> ( Full Counting Statistics, FCS ) 并结合相干势能近似 ( Coherent Potential Approximation, CPA )，计算无序系统的<em>量子输运</em>过程中相关的物理量。	
+	用<em>全系综统计</em> ( Full Counting Statistics, FCS ) ，计算无序系统的<em>量子输运</em>过程中相关的物理量。	
 </p>
 	
 	<h2>课程</h2>
