--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	 BSc &nbsp; LZU; &nbsp; &nbsp; PhD candidate &nbsp; HKU 
 	 </p>
 	 </div>	
-	<div id="Personal_Photo"> <img src="./images/prof_pic.gif" width="192" height="256"> <br>
+	<div id="Personal_Photo"> <img src="./images/prof_pic.png" width="192" height="256"> <br>
 	<p>
 	Room 418, CYM Physics BLD <br>
 	The University of Hong Kong<br>
