--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<nav>
 	<ul>
 		<li class="selected"><a href="index.html">Homepage</a></li>
-		<li><a href="">Blog</a></li>
+		<!-- <li><a href="./blog/blog.html">Blog</a></li> -->
 		<li><a href="./research/research.html">Research</a></li>
 		<li><a target="_blank" href="http://www.physics.hku.hk/~phys4150/">Course</a></li>
 	</ul>
@@ -48,7 +48,7 @@
 		
 	<h2>个人经历</h2>
 	<p>
-	<a target="_blank" href="http://www.sycz.net/home">济南实验初级中学</a>，济南，2004年9月 - 2007年6月
+	<a target="_blank" href="http://www.sycz.net/index.php">济南实验初级中学</a>，济南，2004年9月 - 2007年6月
 	</p>
 	<p>
 	<a target="_blank" href="http://www.fuzhong.sd.cn/">山东师范大学附属中学</a>，济南，2007年9月 - 2010年6月
