--- a/research/research.html
+++ b/research/research.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Fu Bin's HomePage</title>
+    <title>Research</title>
     <link rel="stylesheet" type="text/css" href="../Page_site.css">
 	<link rel="stylesheet" type="text/css" href="research_set.css">
   </head> 
