--- a/research/research.html
+++ b/research/research.html
@@ -86,6 +86,10 @@
 	</div>
 	
 	<div>
+	<h2><a href="./Action_Recognition/Action_Recognition.html">Action Recognition</a></h2>
+	</div>
+	
+	<div>
 	<h2><a href="./Text_to_Speech/Text_to_Speech.html">Text to Speech</a></h2>
 	</div>
 	
