--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<li class="selected"><a href="index.html">Homepage</a></li>
 		<!-- <li><a href="./blog/blog.html">Blog</a></li> -->
 		<li><a href="./research/research.html">Research</a></li>
-		<li><a target="_blank" href="http://www.physics.hku.hk/~phys4150/">Course</a></li>
+		<!-- <li><a target="_blank" href="http://www.physics.hku.hk/~phys4150/">Course</a></li> -->
 	</ul>
 	</nav>
 	
