--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h1 id="name"> 付彬  </h1>
 	 <div id="nameunderline"> 
 	 <p>
-	 BSc &nbsp; LZU; &nbsp; &nbsp; PhD &nbsp; HKU &nbsp; Assistant Professor &nbsp; SIAT 
+	 BSc &nbsp; LZU; &nbsp; &nbsp; PhD &nbsp; HKU; &nbsp; Assistant Professor &nbsp; SIAT 
 	 </p>
 	 </div>	
 	<div id="Personal_Photo"> <img src="./images/prof_pic.png" width="192" height="256"> <br>
